# dnn-dependencies

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  pyproject.toml  requirements.txt  torchDependencies.toml
data/hfMetadata/: countPyTorchModels.bash  countTensorFlowModels.bash
data/utils/: createONNXConversionCommands.py  extractJSON.py  validateGEXF.bash
dnn_dependencies/: __init__.py  hfExample.py  hfExample_Pytorch.py  hfExample_Tensorflow.py  program.py  testExample.py  torch2onnx.bash  viewOnnxArchitecture.py
dnn_dependencies/args/: __init__.py  architectureArgs.py  args.py  computeMetrics_args.py  generalArgs.py  gexf2dot_args.py  gexfNodeLabels2graph_args.py  modelFSArgs.py  modelTreeExporterArgs.py  onnx2gexf_args.py  pipelineArgs.py  simScoreToDB_args.py  similarity_args.py  summaryArgs.py
dnn_dependencies/computeSimilarity/: nearestNeighbors.py
dnn_dependencies/converters/: automateConversion.bash  gexf2dot.py  onnx2gexf.bash  onnx2gexf.py  pytorch2onnx.bash
dnn_dependencies/errorLogClassifier/: findSuccessfulLogs.bash
dnn_dependencies/extractors/: gexfNodeLabels2graph.py
dnn_dependencies/graphAnalysis/: isomorphism.py  modelFS.py  modelNodeExporter.py  nx.py
dnn_dependencies/idBaseModels/: idBaseModels.py
dnn_dependencies/manualEdits/: gpt2.py
dnn_dependencies/metrics/: README.md  computeMetrics.bash  computeMetrics.py  computeMetrics.py.patch  countNodePairs.py  example.db  fruit.db  graphProperties.py  isomorphism_old.py  jsonToSQLite.py  metrics.py  metricsTesting.py  models.db  nearestNeighbors.py  nicholasMetrics.py  nodePairs.py  simScoreAutomate.bash  simScoreToDB.py  simScores.py  similarity.py  similarityMetrics.py  similarityScoreToDB.py  similarityScoreToJSON.py  visualization.py  visualize.py
dnn_dependencies/models2gexfPipeline/: downloadModelJSONList.py  pipeline.bash  pipeline.py  torch2onnx.bash
dnn_dependencies/onnxArchitecture/: communitiesIsomorphism.py  exportArchitecture.py  exportArchitecture_2.py  exportLayers.py  exportLayersCopy.py  graphCommunities.py  graphIsomorphism.py  graphMetrics.py  layerIsomorphism.py  modelFS.py  nx.py  onnxWeights.py  partitionIsomorphism.py  slidingIsomorphism.py  subgraphIsomorphism.py  test.py  test2.py  test3.py  test4.py  validateXML.bash
dnn_dependencies/pipeline/: pipeline.bash
dnn_dependencies/schemas/: df.py  sql.py  sqlDev.py  sqlRefactor.py
docs/: Makefile  args.rst  conf.py  converters.rst  dnn_dependencies.converters.rst  dnn_dependencies.rst  index.rst  metrics.rst  modules.rst
pipeline/: pipeline.bash
utils/: optparse.bash
(+51 files in other folders)
